--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/supreeti/ToDoList-PartnerReview/issues"
   },
-  "homepage": "https://github.com/supreeti/ToDoList-PartnerReview",
+  "homepage": "https://supreeti.github.io/ToDoList-PartnerReview/",
   "devDependencies": {
     "css-loader": "^6.7.3",
     "csv-loader": "^3.0.5",
